--- a/Pitch Perfect/Base.lproj/Main.storyboard
+++ b/Pitch Perfect/Base.lproj/Main.storyboard
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7702" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="hld-KA-WUs">
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7701"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
-        <!--Record-->
+        <!--Start Record View Controller-->
         <scene sceneID="ufC-wZ-h7g">
             <objects>
-                <viewController title="Record" id="vXZ-lx-hvc" customClass="ViewController" customModule="Pitch_Perfect" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController title="Start Record View Controller" id="vXZ-lx-hvc" customClass="StartRecordViewController" customModule="Pitch_Perfect" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="jyV-Pf-zRb"/>
                         <viewControllerLayoutGuide type="bottom" id="2fi-mo-0CV"/>
@@ -58,12 +60,12 @@
                                 <exclude reference="tYA-7p-nWn"/>
                             </mask>
                             <mask key="constraints">
+                                <exclude reference="Dbf-vD-dom"/>
+                                <exclude reference="xgU-zg-K67"/>
+                                <exclude reference="pks-VU-UOL"/>
                                 <exclude reference="38o-AQ-2Wz"/>
                                 <exclude reference="QVX-c1-WrO"/>
                                 <exclude reference="xk6-zM-ypY"/>
-                                <exclude reference="xgU-zg-K67"/>
-                                <exclude reference="pks-VU-UOL"/>
-                                <exclude reference="Dbf-vD-dom"/>
                             </mask>
                         </variation>
                         <variation key="widthClass=compact">
@@ -73,12 +75,12 @@
                                 <include reference="tYA-7p-nWn"/>
                             </mask>
                             <mask key="constraints">
+                                <include reference="Dbf-vD-dom"/>
+                                <include reference="xgU-zg-K67"/>
+                                <include reference="pks-VU-UOL"/>
                                 <include reference="38o-AQ-2Wz"/>
                                 <include reference="QVX-c1-WrO"/>
                                 <include reference="xk6-zM-ypY"/>
-                                <include reference="xgU-zg-K67"/>
-                                <include reference="pks-VU-UOL"/>
-                                <include reference="Dbf-vD-dom"/>
                             </mask>
                         </variation>
                     </view>
@@ -96,14 +98,90 @@
         <!--Play Sounds View Controller-->
         <scene sceneID="H3Y-EG-Xdr">
             <objects>
-                <viewController id="2s6-dh-yu4" customClass="PlaySoundsViewController" customModule="Pitch_Perfect" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController title="Play Sounds View Controller" id="2s6-dh-yu4" customClass="PlaySoundsViewController" customModule="Pitch_Perfect" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="SYg-dT-UQZ"/>
                         <viewControllerLayoutGuide type="bottom" id="ZgN-6l-xH2"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="cOC-m5-i7H">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="g7l-cQ-sRk">
+                                <rect key="frame" x="-23" y="-15" width="46" height="30"/>
+                                <state key="normal" image="snail_image">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="PlaySlowAudio:" destination="2s6-dh-yu4" eventType="touchUpInside" id="qqx-aS-Swf"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" showsTouchWhenHighlighted="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cyh-ea-ZjL">
+                                <rect key="frame" x="-23" y="-15" width="46" height="30"/>
+                                <state key="normal" image="rabbit_image">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="PlayFastAudio:" destination="2s6-dh-yu4" eventType="touchUpInside" id="GFf-nN-4Hm"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Wd0-5R-uAp">
+                                <rect key="frame" x="-23" y="-15" width="46" height="30"/>
+                                <state key="normal" image="stopButton">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="StopAudio:" destination="2s6-dh-yu4" eventType="touchUpInside" id="qbl-V1-LWi"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailingMargin" secondItem="cyh-ea-ZjL" secondAttribute="trailing" constant="30" id="MHN-YU-75Y"/>
+                            <constraint firstItem="cyh-ea-ZjL" firstAttribute="top" secondItem="SYg-dT-UQZ" secondAttribute="bottom" constant="146" id="aa1-EE-v2I">
+                                <variation key="widthClass=compact" constant="50"/>
+                            </constraint>
+                            <constraint firstItem="ZgN-6l-xH2" firstAttribute="top" secondItem="Wd0-5R-uAp" secondAttribute="bottom" constant="107" id="fhg-FK-qWl">
+                                <variation key="widthClass=compact" constant="8"/>
+                            </constraint>
+                            <constraint firstItem="g7l-cQ-sRk" firstAttribute="leading" secondItem="cOC-m5-i7H" secondAttribute="leadingMargin" constant="32" id="fz8-uC-xHG">
+                                <variation key="widthClass=compact" constant="30"/>
+                            </constraint>
+                            <constraint firstItem="g7l-cQ-sRk" firstAttribute="top" secondItem="SYg-dT-UQZ" secondAttribute="bottom" constant="39" id="p1P-w7-mnb">
+                                <variation key="widthClass=compact" constant="50"/>
+                            </constraint>
+                            <constraint firstAttribute="centerX" secondItem="Wd0-5R-uAp" secondAttribute="centerX" id="yDJ-KR-2Eo"/>
+                        </constraints>
+                        <variation key="default">
+                            <mask key="subviews">
+                                <exclude reference="g7l-cQ-sRk"/>
+                                <exclude reference="cyh-ea-ZjL"/>
+                                <exclude reference="Wd0-5R-uAp"/>
+                            </mask>
+                            <mask key="constraints">
+                                <exclude reference="fz8-uC-xHG"/>
+                                <exclude reference="p1P-w7-mnb"/>
+                                <exclude reference="MHN-YU-75Y"/>
+                                <exclude reference="aa1-EE-v2I"/>
+                                <exclude reference="yDJ-KR-2Eo"/>
+                                <exclude reference="fhg-FK-qWl"/>
+                            </mask>
+                        </variation>
+                        <variation key="widthClass=compact">
+                            <mask key="subviews">
+                                <include reference="g7l-cQ-sRk"/>
+                                <include reference="cyh-ea-ZjL"/>
+                                <include reference="Wd0-5R-uAp"/>
+                            </mask>
+                            <mask key="constraints">
+                                <include reference="fz8-uC-xHG"/>
+                                <include reference="p1P-w7-mnb"/>
+                                <include reference="MHN-YU-75Y"/>
+                                <include reference="aa1-EE-v2I"/>
+                                <include reference="yDJ-KR-2Eo"/>
+                                <include reference="fhg-FK-qWl"/>
+                            </mask>
+                        </variation>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="bSk-Kj-hj6" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -131,6 +209,8 @@
     </scenes>
     <resources>
         <image name="microphone" width="100" height="100"/>
+        <image name="rabbit_image" width="100" height="100"/>
+        <image name="snail_image" width="100" height="100"/>
         <image name="stopButton" width="50" height="50"/>
     </resources>
 </document>
