--- a/Pitch Perfect/Base.lproj/Main.storyboard
+++ b/Pitch Perfect/Base.lproj/Main.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7702" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="hld-KA-WUs">
     <dependencies>
-        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7701"/>
+        <capability name="Alignment constraints with different attributes" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
@@ -60,13 +60,13 @@
                                 <exclude reference="tYA-7p-nWn"/>
                             </mask>
                             <mask key="constraints">
-                                <exclude reference="38o-AQ-2Wz"/>
-                                <exclude reference="QVX-c1-WrO"/>
-                                <exclude reference="xk6-zM-ypY"/>
+                                <exclude reference="Dbf-vD-dom"/>
                                 <exclude reference="bYp-Wd-R68"/>
                                 <exclude reference="xgU-zg-K67"/>
                                 <exclude reference="pks-VU-UOL"/>
-                                <exclude reference="Dbf-vD-dom"/>
+                                <exclude reference="38o-AQ-2Wz"/>
+                                <exclude reference="QVX-c1-WrO"/>
+                                <exclude reference="xk6-zM-ypY"/>
                             </mask>
                         </variation>
                         <variation key="widthClass=compact">
@@ -76,13 +76,13 @@
                                 <include reference="tYA-7p-nWn"/>
                             </mask>
                             <mask key="constraints">
-                                <exclude reference="38o-AQ-2Wz"/>
-                                <include reference="QVX-c1-WrO"/>
-                                <include reference="xk6-zM-ypY"/>
+                                <include reference="Dbf-vD-dom"/>
                                 <include reference="bYp-Wd-R68"/>
                                 <include reference="xgU-zg-K67"/>
                                 <include reference="pks-VU-UOL"/>
-                                <include reference="Dbf-vD-dom"/>
+                                <exclude reference="38o-AQ-2Wz"/>
+                                <include reference="QVX-c1-WrO"/>
+                                <include reference="xk6-zM-ypY"/>
                             </mask>
                         </variation>
                     </view>
@@ -192,16 +192,16 @@
                                 <exclude reference="Adv-PS-AYm"/>
                             </mask>
                             <mask key="constraints">
-                                <exclude reference="fz8-uC-xHG"/>
-                                <exclude reference="p1P-w7-mnb"/>
-                                <exclude reference="MHN-YU-75Y"/>
-                                <exclude reference="aa1-EE-v2I"/>
-                                <exclude reference="ACR-Gp-dBK"/>
-                                <exclude reference="lcG-AW-o33"/>
+                                <exclude reference="fhg-FK-qWl"/>
                                 <exclude reference="GNd-k4-WeF"/>
                                 <exclude reference="dDJ-pO-9l0"/>
                                 <exclude reference="yDJ-KR-2Eo"/>
-                                <exclude reference="fhg-FK-qWl"/>
+                                <exclude reference="MHN-YU-75Y"/>
+                                <exclude reference="aa1-EE-v2I"/>
+                                <exclude reference="fz8-uC-xHG"/>
+                                <exclude reference="p1P-w7-mnb"/>
+                                <exclude reference="ACR-Gp-dBK"/>
+                                <exclude reference="lcG-AW-o33"/>
                             </mask>
                         </variation>
                         <variation key="widthClass=compact">
@@ -213,16 +213,16 @@
                                 <include reference="Adv-PS-AYm"/>
                             </mask>
                             <mask key="constraints">
-                                <include reference="fz8-uC-xHG"/>
-                                <include reference="p1P-w7-mnb"/>
-                                <include reference="MHN-YU-75Y"/>
-                                <include reference="aa1-EE-v2I"/>
-                                <include reference="ACR-Gp-dBK"/>
-                                <include reference="lcG-AW-o33"/>
+                                <include reference="fhg-FK-qWl"/>
                                 <include reference="GNd-k4-WeF"/>
                                 <include reference="dDJ-pO-9l0"/>
                                 <include reference="yDJ-KR-2Eo"/>
-                                <include reference="fhg-FK-qWl"/>
+                                <include reference="MHN-YU-75Y"/>
+                                <include reference="aa1-EE-v2I"/>
+                                <include reference="fz8-uC-xHG"/>
+                                <include reference="p1P-w7-mnb"/>
+                                <include reference="ACR-Gp-dBK"/>
+                                <include reference="lcG-AW-o33"/>
                             </mask>
                         </variation>
                     </view>
